--- a/pom.xml
+++ b/pom.xml
@@ -103,7 +103,7 @@
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
-			<version>5.1.40</version>
+			<version>8.0.22</version>
 		</dependency>
 
 		<dependency>
@@ -149,11 +149,11 @@
 			</plugin>
 		</plugins>
 	</build>
-	
+
 	<developers>
 		<developer>
-			<name>John Doe</name>
-			<email>jdoe@example.com</email>
+			<name>Olicleiton</name>
+			<email>olicaldana@hotmail.com</email>
 		</developer>
 	</developers>
 </project>
